feat(ai-voice): integrate CUTM courseware & faculty intelligence, Gemini Live voice upgrade, and noise-resilient interruption